<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.dit.maximilian.mihoc.MainActivity" >

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintitle"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName" 
        android:hint="@string/nameHint"
        />
    
    <RadioGroup
            android:id="@+id/gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/name"
            android:layout_marginTop="10dp"
            android:padding="5dp"  >

        	<RadioButton
                android:id="@+id/none"
                android:text="@string/genderNone" 
                android:checked="true"/>
        	
            <RadioButton
                android:id="@+id/male"
                android:text="@string/genderM" />

            <RadioButton
                android:id="@+id/female"
                android:text="@string/genderF" />
   	</RadioGroup>

    <Spinner
        android:id="@+id/jobTytle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender" 
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/ageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jobTytle"
        android:layout_marginTop="10dp"
        android:text="@string/ageTxtView" />

    <EditText
        android:id="@+id/ageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/jobTytle"
        android:layout_alignParentRight="true"
        android:inputType="number" 
        android:ems="4" />


    <TextView
        android:id="@+id/totalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageId"
        android:layout_marginTop="20dp"
        android:text="@string/totalTxtView" />

    <EditText
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ageId"
        android:ems="4"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/emailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalId"
        android:layout_marginTop="20dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" 
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextButton" 
        android:layout_below="@+id/emailId"
        
        />

</RelativeLayout>
</ScrollView>